# Trinity-Download-Manager

./: .env.release.example  .gitignore  AI_HANDOFF.md  README.md  Run Trinity Download Manager.bat  package-lock.json  package.json
browser-extension/chrome/: background.js  content.js  manifest.json  options.css  options.html  options.js  page-hook.js  popup.css  popup.html  popup.js
download-test-harness/: README.md  server.mjs
download-test-harness/site/: app.js  index.html  styles.css
scripts/: regenerate_icons.py
scripts/release/: README.md  deploy-update.ps1  generate-manifest.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: download_engine.rs  lib.rs  main.rs  models.rs  storage.rs  task_manager.rs  torrent_manager.rs
