[package]
name = "trinity-download-manager"
version = "0.1.9"
description = "Professional desktop download manager"
authors = ["Trinity Download Manager"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trinity_download_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["fs", "io-util"] }
tauri-plugin-dialog = "2.7.1"
chrono = "0.4.44"
notify = "8"
base64 = "0.22"
png = "0.17"
filetime = "0.2"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_Power",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
